src/Request.module.css
.request {
  --neon: var(--neon-hex);
  color: var(--neon);

  height: auto;
  min-height: 100vh;
  min-height: -webkit-fill-available;

  display: flex;
  flex-direction: column;
  justify-content: space-evenly;

  font-family: "Cascadia Mono", monospace;
}

@supports (color: color(rec2020 0 0 0)) {
  .request {
    --neon: var(--neon-hdr);
  }
}

.request section {
  margin: 2em auto;
  padding: 2em;
  border: 2px solid var(--neon);
}

@media only screen and (max-width: 420px) {
  .request section {
    width: calc(100% - 2em);
    height: calc(100% - 2em);
    margin: 1em;
    padding: 2em 1.5em;
  }
}

.request header {
  color: inherit;
  text-align: right;
}

.logo {
  margin-left: auto;
  width: fit-content;
}

.provider {
  margin: 0.25em 0 3em;
  text-align: right;
  font-weight: 500;
  text-transform: lowercase;
}

.instruction {
  display: flex;
  margin: 2em 0;
  line-height: 25px;
}

.instruction:last-of-type {
  margin-bottom: 1em;
}

.emoji {
  font-size: 1.25em;
  font-family: "Noto Emoji Home", monospace;
  font-weight: 500;
  margin-right: 1em;
}

.request code,
.request pre {
  width: 25ch;
}

.instruction a,
.compass label {
  color: var(--neon);
  font-weight: 550;
}

.instruction a:hover,
.compass label:hover,
.compass button:hover {
  text-decoration: underline;
  cursor: pointer;
}

.finger pre {
  margin-top: 1em;
}

.compass {
  display: flex;
  width: 100%;
}

.compass input {
  display: none;
}

.compass a {
  /* fixes cut-off focus border */
  margin-right: 1px;
}

.grow {
  flex: 1;
}

.reset {
  margin-right: -0.5ch;
}

.reset button {
  padding: 0 0.5ch;
  font-size: 1.1em;
  font-weight: 900;
}
.reset button svg {
  margin-bottom: 0.2em;
}

